# tender-phase1

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.example.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  main.py  run_crawl_job.py  run_source_scheduler.py
crawler/: README.md  scrapy.cfg
docs/: acceptance-checklist.md  admin-navigation.md  crawl-error-admin.md  crawl-job-admin.md  crawl-job-api.md  crawl-job.md  crawler-architecture.md  dashboard.md  data-model.md  demo-runbook.md  health-rule-config.md  new-notice-indicator.md  notice-admin.md  notice-api.md  notice-export.md  notice-version-viewer.md  notice-versioning.md  notice-workbench.md  product-phase2-plan.md  raw-document-admin.md  raw-document-viewer.md  retry-and-ops-report.md  runbook.md  source-admin.md  source-anhui-ggzy-zfcg.md  source-ccgp-gov-cn.md  source-ccgp-hubei.md  source-ccgp-jiangsu.md  source-config.md  source-dedup-strategy.md  source-ggzy-gov-cn.md  source-health.md  source-manual-create.md  source-schedule.md
scripts/: app_entrypoint.sh  check_env.py  dev_down.bat  dev_down.sh  dev_up.bat  dev_up.sh  migrate_entrypoint.sh  run_crawl_job.py  seed_demo_entrypoint.sh  seed_sources.py  wait_for_db.py
tests/: conftest.py  test_admin_csrf.py  test_admin_e2e_playwright.py  test_admin_runtime_regression.py  test_alembic_migrations.py  test_app_lifespan.py  test_auth_security.py  test_crawl_error_admin_pages.py  test_crawl_error_api.py  test_crawl_job_admin_pages.py  test_crawl_job_api.py  test_crawl_job_service.py  (+26 more)
(+142 files in other folders)
