[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tender-phase1"
version = "0.1.0"
description = "Tender aggregation platform phase-1 scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "alembic>=1.13.0,<2.0.0",
  "apscheduler>=3.10.4,<4.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "scrapy>=2.11.0,<3.0.0",
  "playwright>=1.52.0,<2.0.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0"
]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
  "types-openpyxl==3.1.5.20250919"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "crawler"]
addopts = "-q"

[[tool.mypy.overrides]]
module = [
  "apscheduler.jobstores.base",
  "apscheduler.schedulers.background",
  "apscheduler.triggers.interval",
]
ignore_missing_imports = true
